@@ -1,3 +1,15 @@
+2012-06-13  Ian Vollick  <vollick@chromium.org>
+
+        [chromium] Certain settings in CCSettings could be global
+        https://bugs.webkit.org/show_bug.cgi?id=88384
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebLayerTreeView.h:
+        (WebCore):
+        (WebKit::WebLayerTreeView::Settings::Settings):
+        (Settings):
+
 2012-06-12  James Robinson  <jamesr@chromium.org>
 
         [chromium] Port Canvas2DLayerBridge over to WebExternalTextureLayer
